Can't fix profile extra space

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -633,7 +633,7 @@ md-sidenav.md-closed.md-locked-open-add-active.user_menu {
   height: 100% !important;
 }
 #calendar{
-  max-height: 12em !important;
+  // max-height: 12em !important;
 }
 
 .calendar_buttons{
